--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--추가 meta tag-->
+    <meta name="NaverBot" content="All" />
+    <meta name="NaverBot" content="index,follow" />
+    <meta name="Yeti" content="All" />
+    <meta name="Yeti" content="index,follow" />
+
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+    <meta name="robots" content="index, follow">
+    <meta name="title" content="">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta name="twitter:card" content="">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:url" content="">
+    <meta name="twitter:image" content="">
+    <!--//추가 meta tag-->
+
     <title>인바이츠바이오코아(주)</title>
+    <link rel="icon" href="images/favicon.png" />
+
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
@@ -63,6 +92,11 @@
                         <li><a href="">채용정보</a>
                     </ul>
                 </nav>
+            </div>
+            <div class="mopen">
+                <button>
+                    <span class="blind">모바일 메뉴</span>
+                </button>
             </div>
         </header>
 
@@ -146,7 +180,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="con_right" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
+                    <div class="con_right" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100"
                         data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-mirror="true"
                         data-aos-once="false">
                         <figure>
@@ -159,9 +193,8 @@
 
 
 
-            <!-- 이름기능뺴기 -->
 
-            <section class="main_sticky sec">
+            <section class="main_tech sec">
                 <div class="inner">
                     <div class="st_left">
                         <div class="tit">
@@ -355,6 +388,9 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="txt">
+                        <p>Invites Biocore</p>
+                    </div>
                 </div>
             </section>
 
@@ -401,12 +437,12 @@
                 <div class="inner fb_con">
                     <ul class="address">
                         <li><a href="">08511 서울특별시 금천구 디지털로9길 33 (가산동)</a></li>
-                        <li><a href=""><strong>TEL</strong>02.2027.6200 </a></li>
-                        <li><a href=""><strong>FAX</strong>02.2027.6201</a></li>
+                        <li><a href=""><strong>TEL</strong> 02.2027.6200 </a></li>
+                        <li><a href=""><strong>FAX</strong> 02.2027.6201</a></li>
                     </ul>
                     <ul class="list">
-                        <li><strong>사업자등록번호</strong>106-81-99931</li>
-                        <li><strong>대표자</strong>신용규, 변석수</li>
+                        <li><strong>사업자등록번호</strong> 106-81-99931</li>
+                        <li><strong>대표자</strong> 신용규, 변석수</li>
                     </ul>
                     <div class="copy">
                         &copy;2023 Biocore company. All rights reserved.
