--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <meta name="robots" content="index, follow">
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="title" content="인바이츠바이오코아(주)">
+    <meta name="description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
+    <meta name="keywords" content="인바이츠바이오코아(주), 신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문">
 
     <meta property="og:type" content="article">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-    <meta name="twitter:card" content="">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:url" content="">
-    <meta name="twitter:image" content="">
+    <meta property="og:title" content="인바이츠바이오코아(주)">
+    <meta property="og:description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
+    <meta property="og:url" content="https://moon0suns.github.io/project09_invites">
+    <meta property="og:image" content="https://www.bio-core.com/images/common/logo_biocore_og.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="인바이츠바이오코아(주)">
+    <meta name="twitter:description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
+    <meta name="twitter:url" content="https://moon0suns.github.io/project09_invites">
+    <meta name="twitter:image" content="https://www.bio-core.com/images/common/logo_biocore_og.png">
     <!--//추가 meta tag-->
 
     <title>인바이츠바이오코아(주)</title>
@@ -309,7 +309,8 @@
                     </div>
                     <div class="con_wrap">
                         <ul>
-                            <li>
+                            <li data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000"
+                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false">
                                 <figure>
                                     <img src="./images/esg_img_01.png" alt="">
                                 </figure>
@@ -323,7 +324,8 @@
                                     </p>
                                 </div>
                             </li>
-                            <li>
+                            <li data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000"
+                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false">
                                 <figure>
                                     <img src="./images/esg_img_02.png" alt="">
                                 </figure>
@@ -337,7 +339,8 @@
                                     </p>
                                 </div>
                             </li>
-                            <li>
+                            <li data-aos="fade-up" data-aos-offset="200" data-aos-delay="150" data-aos-duration="1000"
+                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false">
                                 <figure>
                                     <img src="./images/esg_img_03.png" alt="">
                                 </figure>
@@ -354,6 +357,8 @@
                     </div>
                 </div>
             </section>
+
+
 
             <section class="main_news sec">
                 <div class="inner">
