--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--추가 meta tag-->
     <meta name="NaverBot" content="All" />
     <meta name="NaverBot" content="index,follow" />
     <meta name="Yeti" content="All" />
     <meta name="Yeti" content="index,follow" />
 
     <meta name="format-detection" content="telephone=no">
-    <meta name="viewport"
-        content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <meta name="robots" content="index, follow">
     <meta name="title" content="인바이츠바이오코아(주)">
     <meta name="description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
@@ -24,12 +21,11 @@
     <meta property="og:description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
     <meta property="og:url" content="https://moon0suns.github.io/project09_invites">
     <meta property="og:image" content="https://www.bio-core.com/images/common/logo_biocore_og.png">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="인바이츠바이오코아(주)">
     <meta name="twitter:description" content="신약개발, 생명공학 연구소, 생동성시험, DNA칩, 진단키트, 임상시험 수탁대행, 생체시료분석 전문.">
     <meta name="twitter:url" content="https://moon0suns.github.io/project09_invites">
     <meta name="twitter:image" content="https://www.bio-core.com/images/common/logo_biocore_og.png">
-    <!--//추가 meta tag-->
 
     <title>인바이츠바이오코아(주)</title>
     <link rel="icon" href="images/favicon.png" />
